chore: Code maintenance and quality improvements (#52)
- Reordered imports consistently
- Fixed code formatting and indentation
- Applied Java best practices